Changed jwt and now completed and tested login and signup is pushed