@@ -2,9 +2,11 @@ package com.rbm.artif.security;
 
 import com.rbm.artif.entity.Users;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 	private final Users user;
@@ -15,8 +17,7 @@ public class CustomUserDetails implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		// You can customize roles/authorities here if needed
-		return Collections.emptyList();
+		return List.of(new SimpleGrantedAuthority("ROLE_" + user.getUserPremium().name()));
 	}
 
 	@Override
